added code to connect to aws RDS

--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1> Reservation Confirmation</h1>
- <a href="/Hotels"><span th:text="'Reservation made for,'+ ${guest.name}"> </span></a>
+ <a href="/HotelWebApp"><span th:text="'Reservation made for,'+ ${name}"> </span></a>
 </html>
 </body>
