--- a/src/main/resources/templates/cancelled.html
+++ b/src/main/resources/templates/cancelled.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1> Reservation Confirmation</h1>
- <a href="/"><span th:text="'Reservation cancelled for: '+ ${message}"> </span></a>
+ <a href="/HotelWebApp"><span th:text="'Reservation cancelled for: '+ ${message}"> </span></a>
 </html>
 </body>
