push latest 1005pm

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1> Welcome to the Hotel Reservation App</h1>
- <a href="/Hotels"><span th:text="'Hello Guest,'+ ${message}"> </span></a>
+ <a href="/Hotel/Hotels"><span th:text="'Hello Guest,'+ ${message}"> </span></a>
 </html>
 </body>
